Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-118201

namespace "std" has no member "exception_ptr"

XMLWordPrintable

    • d3c501e32 (dev), 3ace62330 (6.6), 36f0826ab (tqtc/lts-6.5)

      "/home/qt/work/qt/qtlanguageserver/src/jsonrpc/qjsonrpcprotocol.cpp", line 61: error #135:
                namespace "std" has no member "exception_ptr"
        std::exception_ptr createLocalInvalidRequestException(const QJsonValue &id = QJsonValue::Null)
             ^
      "/home/qt/work/qt/qtlanguageserver/src/jsonrpc/qjsonrpcprotocol.cpp", line 63: error #135:
                namespace "std" has no member "make_exception_ptr"
            return std::make_exception_ptr(
                        ^
      

      Build log: https://testresults.qt.io/logs/qt/qtlanguageserver/787290da9f4fc221f39c099cc9116db96d4c9006/LinuxUbuntu_22_04x86_64LinuxINTEGRITYx86_64GCCqtci-linux-Ubuntu-22.04-x86_64-51-07c37cMinimalStaticTests_UseConfigure/8c27edd3d875085a1409406d6a960f537d4ceaec/build_1702327615/log.txt.gz

      Details: https://testresults.qt.io/coin/integration/qt/qtlanguageserver/tasks/1702327592

      Tested changes (refs/builds/qtci/dev/1697562695):
      https://codereview.qt-project.org/c/qt/qtlanguageserver/+/511663/3 Update dependencies on 'dev' in qt/qtlanguageserver

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            semih.yavuz Semih Yavuz
            janihe Jani Heikkinen
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes