Remove dead code

Pick-to: 6.5
Fixes: QTBUG-118201
Change-Id: Ic5590c31e31b108ff80564722584f691863b0eec
Reviewed-by: Semih Yavuz <semih.yavuz@qt.io>
Reviewed-by: Ulf Hermann <ulf.hermann@qt.io>
(cherry picked from commit d3c501e32b548b40f5df37d3ccbf4a3f663baf0c)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>